force-app/main/default/objects/Template_Variable__c/Template_Variable__c.object-meta.xml
<CustomObject>
    <label>WB Template Variable</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WB Template Variables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>