force-app/main/default/objects/Template_Variable__c/fields/Alternate_Text__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Text__c</fullName>
    <label>Alternate Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>