force-app/main/default/objects/Template_Variable__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <label>Template</label>
    <referenceTo>Template__c</referenceTo>
    <relationshipLabel>WB Template Variables</relationshipLabel>
    <relationshipName>WB_Template_Variables</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>